<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
   >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_departures"
            android:icon="@drawable/ic_departures"
            android:title="@string/departures" />
        <item
            android:id="@+id/nav_arrivals"
            android:icon="@drawable/ic_arrivals"
            android:title="@string/arrivals" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
        </menu>
    </item>
</menu>